# crewai-investment-strategy

./: LICENSE  README.md  pyproject.toml  streamlit_app.py
doc/: crewai_vs_langGraph.md
src/travel_crew_app/: main.py
src/travel_crew_app/config/: settings.py
src/travel_crew_app/crew/: __init__.py  agents.py  tasks.py  tools.py  travel_crew.py
src/travel_crew_app/models/: __init__.py  schemas.py
src/travel_crew_app/ui/: __init__.py  cli.py
